--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ $(document).bind('adserve', function(e, placement){
 </script>
 </head>
 <body>
+	<p>Ads are seved 50% of the time. Refresh to see the difference in page copy depending on ad presence.</p>
 	<div class="ad-container">
 		<div class="sponsor-text ad1-copy" style="display:none">Sponsored By</d>
 		<div class="ad-target ad1"></div>
